# bare-ocaml

./: .gitignore  CHANGES.md  Makefile  README.md  bare.opam  bare_encoding.opam  bench1.sh  dune-project  index.html
.github/workflows/: gh-pages.yml  main.yml
bare_encoding/: index.html
bare_encoding/Bare_encoding/: index.html
bare_encoding/Bare_encoding/Decode/: index.html
bare_encoding/Bare_encoding/Encode/: index.html
bare_encoding/Bare_encoding/Pp/: index.html
bare_encoding/Bare_encoding/String_map/: index.html
bare_encoding/Bare_encoding/module-type-INPUT/: index.html
bare_encoding/Bare_encoding/module-type-OUTPUT/: index.html
data/: draft-devault-bare-01.txt  draft-devault-bare-11.txt  dune  example1.bare
data/vim/ftdetect/: bare.vim
data/vim/syntax/: bare.vim
src/: Bare.ml  Bare.mli  Bare_encoding.ml  Bare_encoding.mli  bare_encoding.ml  bare_encoding.mli  dune
src/codegen/: ast.ml  bare_codegen.ml  bare_codegen_c.ml  bare_lexer.mll  bare_parser.mly  codegen.ml  codegen_c.ml  codegen_ocaml.ml  dune  main.ml
src/codegen/tool/: dune  embed.ml
tests/: bench1.ml  dune  example1.bare  example1.ml  example1_pp.ml  example2.bare  example2.ml  example2_standalone.ml  example3.bare  example3.ml  try1.ml  try2.expected  try2.ml  try3.ml  try_ex2.expected  try_ex2.ml
tests/unit/: dune  t.ml
