
(executable
  (name try1)
  (modules try1)
  (libraries bare_encoding example1 example1_pp)
  (flags :standard -warn-error -a))

(executable
  (name try2)
  (modules try2)
  (libraries bare_encoding example1)
  (flags :standard -warn-error -a))

(executable
  (name try_ex2)
  (modules example2 try_ex2)
  (libraries bare_encoding)
  (flags :standard -warn-error -a))

(library
  (name example1)
  (modules example1)
  (libraries bare_encoding)
  (flags :standard -warn-error -a))

(library
  (name example1_pp)
  (modules example1_pp)
  (libraries bare_encoding)
  (flags :standard -warn-error -a))

(library
  (name example2_sa)
  (modules example2_standalone)
  (flags :standard -warn-error -a))

(rule
  (alias runtest)
  (action (run ./try1.exe)))

(rule
  (alias runtest)
  (action (run ./try2.exe)))

(rule
  (alias runtest)
  (action (run ./try_ex2.exe)))

(rule
  (targets example1.ml)
  (deps example1.bare)
  (mode promote)
  (action (run ../src/codegen/bare_codegen.exe %{deps} -o %{targets})))

(rule
  (targets example1_pp.ml)
  (deps example1.bare)
  (mode promote)
  (action (run ../src/codegen/bare_codegen.exe --pp %{deps} -o %{targets})))

(rule
  (targets example2.ml)
  (deps example2.bare)
  (mode promote)
  (action (run ../src/codegen/bare_codegen.exe %{deps} -o %{targets})))

(rule
  (targets example2_standalone.ml)
  (deps example2.bare)
  (mode promote)
  (action (run ../src/codegen/bare_codegen.exe --standalone %{deps} -o %{targets})))
