
(executable
  (name try1)
  (modules try1)
  (libraries bare_encoding example1 example1_pp hex)
  (flags :standard -warn-error -a))

(test
  (name try2)
  (modules try2)
  (libraries bare_encoding example1 hex)
  (flags :standard -warn-error -a))

(test
  (name try_ex2)
  (modules example2 try_ex2)
  (libraries bare_encoding hex) 
  (flags :standard -warn-error -a))

(test
  (name example2_standalone)
  (modules example2_standalone)
  (flags :standard -warn-error -a))

(executable
  (name try3)
  (modules try3 example3)
  (libraries bare_encoding hex)
  (flags :standard -warn-error -a))

(executable
  (name bench1)
  (modules bench1)
  (libraries unix bare_encoding example1 example1_pp hex)
  (ocamlopt_flags :standard -O3)
  (flags :standard -warn-error -a))

(library
  (name example1)
  (modules example1)
  (libraries bare_encoding)
  (flags :standard -warn-error -a))

(library
  (name example1_pp)
  (modules example1_pp)
  (libraries bare_encoding)
  (flags :standard -warn-error -a))

(rule
  (targets example1.ml)
  (deps example1.bare)
  (mode promote)
  (action (run ../src/codegen/bare_codegen.exe %{deps} -o %{targets})))

(rule
  (targets example1_pp.ml)
  (deps example1.bare)
  (mode promote)
  (action (run ../src/codegen/bare_codegen.exe --pp %{deps} -o %{targets})))

(rule
  (targets example2.ml)
  (deps example2.bare)
  (mode promote)
  (action (run ../src/codegen/bare_codegen.exe %{deps} -o %{targets})))

(rule
  (targets example2_standalone.ml)
  (deps example2.bare)
  (mode promote)
  (action (run ../src/codegen/bare_codegen.exe --standalone %{deps} -o %{targets})))

(rule
  (targets example3.ml)
  (deps example3.bare)
  (mode promote)
  (action (run ../src/codegen/bare_codegen.exe --pp %{deps} -o %{targets})))

